# text-reader

./: .drone.yml  Cargo.toml  README.md
src/: detector.rs  lib.rs  textreader.rs
tests/: test_detector.rs  test_reader.rs
