[package]
name = "text-reader"
version = "0.2.1"
description = "Text reader."
homepage = "https://github.com/fewensa/text-reader"
repository = "https://github.com/fewensa/text-reader"
license = "MIT"
authors = ["fewensa <fewensa@protonmail.com>"]
edition = "2018"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
readme = "README.md"
categories = ["parsing"]
keywords = ["text", "text-reader"]


[dependencies]
